Adjust toggle positioning

--- a/index.html
+++ b/index.html
@@ -27,12 +27,14 @@
 
         <label for="pages">Number of Pages:</label>
         <input type="number" id="pages" required /><br />
-
-        <label for="read">Read:</label>
-        <div class="toggle">
+        <div class="read">
+          <label for="read">Read:</label>
+          <div class="toggle">
           <input type="checkbox" id="read" class="toggle-checkbox" />
           <label for="read" class="toggle-label"></label>
+          </div>
         </div>
+        
         <br>
         <button type="submit">Add Book</button>
       </form>
